fix btn-primary jumping on hover

--- a/resources/assets/styles/layouts/_general.scss
+++ b/resources/assets/styles/layouts/_general.scss
@@ -49,9 +49,10 @@ input[type="submit"].gform_button,
 .btn-primary:focus,
 .btn-primary:active:focus {
   background-color: transparent;
-  border: 1px solid #525d6f;
+  border: 2px solid #525d6f;
   color: #525d6f;
-  font-weight: 800;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .btn-primary {
@@ -59,11 +60,7 @@ input[type="submit"].gform_button,
   //@include rounded-corners('all', 17px);
   //@include gradient-vertical(#48a23f, #6cc24a);
   //box-shadow: $shadow;
-  background:transparent;
-  border: 2px solid inherit;
   border-radius: 0;
-  font-weight: bold;
-  text-transform: uppercase;
 
   &.white {
     //@include gradient-vertical($primary-color, #52b9e9);
